change app intro text

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -17,7 +17,7 @@
 	<div id="app">
 		<div style="position:absolute; top:30vh; width:100%; text-align:center">
 			<h1>Pizza Place</h1>
-			<p><i class="fas fa-spin fa-spinner"></i> The GIT Repo application is loading...</p>
+			<p><i class="fas fa-spin fa-spinner"></i> The application is loading...</p>
 		</div>
 	</div>
 
